Changed width od main text for mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1479,6 +1479,14 @@ label {
         position: unset;
     }
 
+    .soc-icons {
+        top: 15%;
+    }
+
+    .main-txt {
+        width: 90%;
+    }
+
     #skills h2,
     #projects h2,
     #about h2 {
