--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ label {
 
 /* scroll bar */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 15px;
 
 }
 
@@ -197,8 +197,8 @@ label {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--toggler-color);
-    border: 1px solid #ffffff;
+    background: var(--blue);
+    border: 3px solid #ffffff;
     border-radius: 20px;
     transition-duration: 0.4s;
 }
@@ -374,7 +374,7 @@ label {
 
 .intro-text {
     color: #000000;
-    font-family: var(--text);
+    font-family: var(--text-2);
     text-align: center;
     margin: auto;
     display: flex;
@@ -1164,7 +1164,6 @@ label {
     .main-txt {
         padding: 10px;
         text-align: center;
-        background-color: rgb(255 255 255 / 50%);
     }
 
     .container .main-txt p {
