--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -973,7 +973,7 @@ label {
 .half p, ol, li {
     font-family: var(--text);
     letter-spacing: 1px;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .half p {
@@ -989,7 +989,7 @@ label {
 
 .half ol .title {
     text-align: center;
-    margin: 10px 0;
+    margin: 0 0;
 }
 
 .half li {
